# protobuf_cmake

./: CMakeLists.txt
proto/: CMakeLists.txt  DeviceMessage.proto
